[gd_scene load_steps=2 format=3 uid="uid://14wbidvbiea3"]

[ext_resource type="Script" path="res://scenes/gui/IngameMenu.gd" id="1_nqv1h"]

[node name="IngameMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_nqv1h")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="BottomBar" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="CanonButton" type="Button" parent="MarginContainer/BottomBar"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Canon"

[node name="TopBar" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="WaveLabel" type="Label" parent="MarginContainer/TopBar"]
layout_mode = 2
text = "Wave: 1"

[node name="MoneyLabel" type="Label" parent="MarginContainer/TopBar"]
layout_mode = 2
text = "Money: 500"

[connection signal="pressed" from="MarginContainer/BottomBar/CanonButton" to="." method="_on_button_pressed"]
